build/resources/test/LO-2/ValidPrograms/test_89.lo
// *Good testcase*
// Empty if-else and while
// main return value: 0
// Author: Fall 2021 TAs

int main() {
    int a;

    {
    a = 0;

    while((a>0)) {
	;
    }

    if((a=1)) {
	;
    }
    else {
	;
    }

    return a;
    }
}