build/resources/test/LO-2/InvalidPrograms/test_16.lo
// Incorrect integer negation operator

int main(){
  bool isGt, isLt;
  {
	isGt = (1 > 2);
	isLt = (1 < 2);
	return (isGt ? 1 : (isLt ? -1 : 0));
  }
}